<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="x">X</string>
    <string name="circle_1">Circle 1</string>
    <string name="y">Y</string>
    <string name="r">R</string>
    <string name="circle_2">Circle 2</string>
    <string name="result">Result</string>
    <string name="calculate">Calculate</string>
</resources>